# lecture_to_notes

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  run_pipeline.py  run_server.py
.claude/: settings.local.json
docs/: API.md  EXAMPLES.md  FRONTEND.md  SETUP.md  TROUBLESHOOTING.md  architecture.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  utils.ts
frontend/src/api/: client.ts  jobs.ts  types.ts
frontend/src/components/: AudioBrowser.tsx  ErrorDisplay.tsx  JobCard.tsx  JobList.tsx  JobSubmitForm.tsx  Layout.tsx  OutputViewer.tsx  StatusBadge.tsx  StepProgress.tsx  TopicBrowser.tsx  TopicTreeMap.tsx
output/2026-02-11_SB_03-13-04_-_Importance_of_Association_of_Vaisnavas_-_Balar_eea0eb2f/: enriched_notes_saranagathi.md  final_book.md  generate_pdf.py  structured_notes.md
output/BKG_SB_03-01-02_-_Choose_your_association_carefully_-_2017-09-01_Austra_31db44f5/: final_book.md
output/BKG_SB_09-10-15_-_Lord_Rama_s_Pastimes_Part-01_-_2021-07-02_Slovenia_6a86366d/: final_book.md
src/lecture_agents/: checkpoint.py  exceptions.py  orchestrator.py  utils.py
tests/: conftest.py
tests/fixtures/: conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_api.py  test_checkpoint.py  test_compiler_agent.py  test_compiler_schema.py  test_download_schema.py  test_downloader_agent.py  test_enrichment_agent.py  test_enrichment_schema.py  test_orchestrator.py  test_transcriber_agent.py  test_transcript_schema.py  test_utils.py  test_validation_agent.py  test_vedabase_fetcher.py
(+45 files in other folders)
